Slight revision preventing contrast checker rows from bleeding off page too early in page shrinking

--- a/public/styles/main.sass
+++ b/public/styles/main.sass
@@ -596,10 +596,10 @@ section
 .contrast-checker-row
     width: 1424px
     display: flex
-    margin-top: 48px
+    margin-bottom: 48px
     justify-content: space-between
-    &:first-child
-        margin-top: 0px
+    &:last-child
+        margin-bottom: 0px
 
 .contrast-checker-rating
     width: 592px
